Nuevos cambios tras la reunión con el cliente

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<img src="images/slide02.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Siente las auroras boreales en marzo y octubre</p>
+							<p>Siente el frio helado de Elsa cuando se enfada</p>
 							<h2>ISLANDIA</h2>
 						</header>
 					</div>
@@ -61,8 +61,8 @@
 					<img src="images/slide04.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>111111111111111</p>
-							<h2>1111111111111111111111111</h2>
+							<p>Anna calma a Elsa. Menos mal que Anna es la mejor de Frozen</p>
+							<h2>Anna calma a Elsa</h2>
 						</header>
 					</div>
 				</article>
