textos finales de Shakira

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 					<img src="images/slide05.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>222222222222222222</p>
-							<h2>L2222222222222222</h2>
+							<p>Al fin reina el amor y se descongela el corazón</p>
+							<h2>Elsa y Anna viven felices</h2>
 						</header>
 					</div>
 				</article>
